# upprpo_nsu

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.app  Dockerfile.web  candle.cpp  candle.h  docker-compose.yml  entrypoint.sh  main.cpp  test-repo-chart-0.1.0.tgz  tests.cpp
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  docker-web-test.yml  docker-web-tests.yml
helm/test-repo-chart/: Chart.yaml  values.yaml
helm/test-repo-chart/templates/: app-deployment.yaml  web-deployment.yaml
k8s/: app-deployment.yaml  log-binding.yaml  log-role.yaml  service-account.yaml  web-deployment.yaml  web-service.yaml
test-repo-chart/: Chart.yaml
test-repo-chart/templates/: web-service.yaml
